[package]
name = "nop-json-derive"
version = "1.1.0"
authors = ["Jeremiah Shaulov <jeremiah.shaulov@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/jeremiah-shaulov/nop-json-derive"
description = "Helper crate for internal use in nop-json"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = "1.0"
quote = "1.0"
